--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "temp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,16 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@syncfusion/ej2-react-popups": "^24.1.46",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
-    "react-router-dom": "^6.21.3"
+    "react-icons": "^5.0.1",
+    "react-player": "^2.14.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.21.3",
+    "react-scrollable-feed": "^2.0.1",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
