--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@syncfusion/ej2-react-popups": "^24.1.46",
     "axios": "^1.6.5",
+    "dotenv": "^16.4.0",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
